- amends realtime polling mechanism to use webflux, for better performance - changes much of the realtime polling code to be a bit better - changes graph code to call collectors api, for better memory usage